--- a/chrome/autohide_navigation_button.css
+++ b/chrome/autohide_navigation_button.css
@@ -13,12 +13,10 @@ navigation-buttons in any order
 
 :is(#back-button,#forward-button),
 #reload-button{
-  margin-inline-start: -34px !important;
-  visibility:hidden;
-  transition: margin 66ms linear !important
+  visibility: visble;
 }
 
-:is(#back-button,#forward-button):hover,
+/* :is(#back-button,#forward-button):hover,
 :is(#back-button,#forward-button):hover ~ :is(#back-button,#stop-reload-button,#forward-button),
 :is(#back-button,#forward-button):hover ~ #stop-reload-button > #reload-button,
 #urlbar-container + toolbarspring:hover ~ :is(#back-button,#forward-button),
@@ -26,11 +24,11 @@ navigation-buttons in any order
 #urlbar-container + toolbarspring:hover ~ #stop-reload-button > #reload-button{
   margin-inline-start: 0px !important;
   visibility: visible
-}
+} */
 
-#nav-bar-customization-target > #downloads-button { margin-inline-start: 0px !important; visibility: visible !important; }
+/* #nav-bar-customization-target > #downloads-button { margin-inline-start: 0px !important; visibility: visible !important; } */
 
 :is(#back-button,#forward-button)[disabled],
 #stop-reload-button > [disabled]{ display: none }
 
-#urlbar-container + toolbarspring{ max-width: 4px !important; min-width: 4px !important; }
+/* #urlbar-container + toolbarspring{ max-width: 4px !important; min-width: 4px !important; } */
